// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompareListComponent matches snapshot 1`] = `
<div
  className="usa-grid-full content-container comparison-outer-container"
>
  <div>
    <Connect(withRouter())
      blacklistMatcher="/compare"
      ignoreCurrentPath={true}
    />
  </div>
  <div
    className="comparison-container"
  >
    <h1>
      Compare Positions
    </h1>
    <div
      className="comparison-table-container"
    >
      <table
        className="tm-table"
      >
        <caption
          className="usa-sr-only"
        >
          Position details comparison:
        </caption>
        <thead
          className="usa-sr-only"
        >
          <tr>
            <th
              scope="row"
            >
              Position
            </th>
            <th
              key="kONdbY1z7lo"
            >
              <div
                className="column-title-main"
              />
            </th>
            <th
              key="YNTUBFnwKN-"
            >
              <div
                className="column-title-main"
              />
            </th>
            <th
              className="empty"
              key="c6JzNIJ70Gs"
            >
              Return to search results and add more positions to compare.
            </th>
            <th
              className="empty"
              key="JXLmRNsMGqy"
            >
              Return to search results and add more positions to compare.
            </th>
            <th
              className="empty"
              key="UsPEo40dbp5"
            >
              Return to search results and add more positions to compare.
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <th
              scope="row"
            >
              Position
            </th>
            <td
              key="VdmtkwR0yjn"
            >
              <div
                className="usa-grid-full"
              >
                <div
                  className="column-title-main"
                >
                  OMS (DCM)
                </div>
                <div
                  className="close-button-container"
                >
                  <CompareCheck
                    as="div"
                    className=""
                    customElement={
                      <FontAwesome
                        name="close"
                      />
                    }
                    interactiveElementProps={
                      Object {
                        "title": "Remove this comparison",
                      }
                    }
                    limit={5}
                    onToggle={[Function]}
                    refKey={1}
                    type="compare"
                  />
                </div>
              </div>
              <span
                aria-labelledby="1 0 0 3 4 0 0 1"
              >
                10034001
              </span>
            </td>
            <td
              key="BmF97zuxZwc"
            >
              <div
                className="usa-grid-full"
              >
                <div
                  className="column-title-main"
                >
                  SPECIAL AGENT
                </div>
                <div
                  className="close-button-container"
                >
                  <CompareCheck
                    as="div"
                    className=""
                    customElement={
                      <FontAwesome
                        name="close"
                      />
                    }
                    interactiveElementProps={
                      Object {
                        "title": "Remove this comparison",
                      }
                    }
                    limit={5}
                    onToggle={[Function]}
                    refKey={2}
                    type="compare"
                  />
                </div>
              </div>
              <span
                aria-labelledby="5 6 0 8 2 0 0 0"
              >
                56082000
              </span>
            </td>
            <th
              className="empty"
              key="tEbb-1qMssU"
            >
              Return to search results and add more positions to compare.
            </th>
            <th
              className="empty"
              key="8yRF4761StA"
            >
              Return to search results and add more positions to compare.
            </th>
            <th
              className="empty"
              key="9rDsMyd_Kxd"
            >
              Return to search results and add more positions to compare.
            </th>
          </tr>
          <tr>
            <th
              scope="row"
            >
              Link to details
            </th>
            <td
              key="c7FW5n5wo4s"
            >
              <div
                className="column-title-link"
              >
                <Link
                  replace={false}
                  to="/details/1"
                >
                  View position
                </Link>
              </div>
            </td>
            <td
              key="ohH-pxc1wQ1"
            >
              <div
                className="column-title-link"
              >
                <Link
                  replace={false}
                  to="/details/2"
                >
                  View position
                </Link>
              </div>
            </td>
            <td
              className="empty"
              key="4dMuOPHGmpp"
            />
            <td
              className="empty"
              key="fK4ZH3I44cc"
            />
            <td
              className="empty"
              key="MHv8rJjE_nT"
            />
          </tr>
          <Flag
            name="flags.static_content"
            render={[Function]}
          />
          <tr>
            <th
              scope="row"
            >
              Location
            </th>
            <td
              key="fRz0ugyYHqB"
            >
              Freetown, Sierra Leone
            </td>
            <td
              key="QpJUWS_KFAI"
            >
              Chicago, IL
            </td>
            <td
              className="empty"
              key="zn8fxQQU1nP"
            />
            <td
              className="empty"
              key="d8-Rf5FgAxb"
            />
            <td
              className="empty"
              key="ONLEmhWa4GR"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              TED
            </th>
            <td
              key="FcHtByalw31"
            >
              None listed
            </td>
            <td
              key="GB-E_yX4d3W"
            >
              None listed
            </td>
            <td
              className="empty"
              key="tjFuqWOQJWA"
            />
            <td
              className="empty"
              key="LShDc728glx"
            />
            <td
              className="empty"
              key="5FPHfgUdTb4"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Skill
            </th>
            <td
              key="l6gWUFzxUzU"
            >
              None listed
            </td>
            <td
              key="8Kon0B9Dldj"
            >
              SECURITY (2501)
            </td>
            <td
              className="empty"
              key="0DEnhawjc8s"
            />
            <td
              className="empty"
              key="asxw5yW3kk8"
            />
            <td
              className="empty"
              key="X0-MRGh95ne"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Grade
            </th>
            <td
              key="Ll9rR2RRRPI"
            >
              06
            </td>
            <td
              key="HLAkuhBp-X9"
            >
              04
            </td>
            <td
              className="empty"
              key="_Wd4z6FlW0u"
            />
            <td
              className="empty"
              key="QptoLUFBzDJ"
            />
            <td
              className="empty"
              key="uZwDylUkbrj"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Bureau
            </th>
            <td
              key="8qHk0r-kEgz"
            >
              None listed
            </td>
            <td
              key="1aO2PPSxMxx"
            >
              (WHA) BUREAU OF WESTERN HEMISPHERIC AFFAIRS
            </td>
            <td
              className="empty"
              key="JOfdtaaVKMe"
            />
            <td
              className="empty"
              key="peqSlXw2ykU"
            />
            <td
              className="empty"
              key="jVBGKJ0ERC5"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Tour of duty
            </th>
            <td
              key="FKzt2uZDfd7"
            >
              None listed
            </td>
            <td
              key="4tErDAHUIC5"
            >
              2 YRS (2 R & R)
            </td>
            <td
              className="empty"
              key="6Hs_SN5UAuM"
            />
            <td
              className="empty"
              key="axE-QhnOHVz"
            />
            <td
              className="empty"
              key="3U8_LQrTX8B"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Language
            </th>
            <td
              key="p9VxAXas-Fd"
            >
              <LanguageList
                languages={Array []}
                propToUse="representation"
              />
            </td>
            <td
              key="gTBaRl8AgB-"
            >
              <LanguageList
                languages={
                  Array [
                    Object {
                      "id": 1,
                      "language": "French (FR)",
                      "reading_proficiency": "2",
                      "representation": "French (FR) 2/2",
                      "spoken_proficiency": "2",
                    },
                    Object {
                      "id": 20,
                      "language": "Haitian Creole (HC)",
                      "reading_proficiency": "0",
                      "representation": "Haitian Creole (HC) 0/0",
                      "spoken_proficiency": "0",
                    },
                  ]
                }
                propToUse="representation"
              />
            </td>
            <td
              className="empty"
              key="X26OrbOusna"
            />
            <td
              className="empty"
              key="xAZSnyDeBF5"
            />
            <td
              className="empty"
              key="UhvZXVbIVCm"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Post differential
            </th>
            <td
              key="nSIeVZhPgcE"
            >
              30%
            </td>
            <td
              key="_bpJl5StlNJ"
            >
              20%
            </td>
            <td
              className="empty"
              key="-9E_vMobjk9"
            />
            <td
              className="empty"
              key="XGDuXkOYz4H"
            />
            <td
              className="empty"
              key="gmssgHJ4r5-"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Danger pay
            </th>
            <td
              key="ym7YcTbm8Qj"
            >
              0%
            </td>
            <td
              key="pqO6pB-Lo9_"
            >
              15%
            </td>
            <td
              className="empty"
              key="QbGfQYAELJ7"
            />
            <td
              className="empty"
              key="iOAp-k2Gatk"
            />
            <td
              className="empty"
              key="UmeS0E2VLRJ"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Favorite
            </th>
            <td
              key="AlG6xfxiCsH"
            >
              <Connect(FavoriteContainer)
                compareArray={
                  Object {
                    "results": Array [],
                  }
                }
                hasBorder={true}
                refKey={1}
                refresh={true}
                useButtonClass={true}
                useButtonClassSecondary={true}
              />
            </td>
            <td
              key="BjGpY-yHTkg"
            >
              <Connect(FavoriteContainer)
                compareArray={
                  Object {
                    "results": Array [],
                  }
                }
                hasBorder={true}
                refKey={2}
                refresh={true}
                useButtonClass={true}
                useButtonClassSecondary={true}
              />
            </td>
            <td
              className="empty"
              key="_VvAkJ-rWo9"
            />
            <td
              className="empty"
              key="43OZuqx_Qx-"
            />
            <td
              className="empty"
              key="-y4u986ur-e"
            />
          </tr>
          <Flag
            name="flags.static_content"
            render={[Function]}
          />
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`CompareListComponent matches snapshot when isLoading is true 1`] = `
<div
  className="usa-grid-full content-container comparison-outer-container"
>
  <div>
    <Connect(withRouter())
      blacklistMatcher="/compare"
      ignoreCurrentPath={true}
    />
  </div>
  <div
    className="comparison-container"
  >
    <h1>
      Compare Positions
    </h1>
    <Spinner
      size="big"
      style={Object {}}
      type="homepage-position-results"
    />
  </div>
</div>
`;

exports[`CompareListComponent matches snapshot when there is an obc id 1`] = `
<div
  className="usa-grid-full content-container comparison-outer-container"
>
  <div>
    <Connect(withRouter())
      blacklistMatcher="/compare"
      ignoreCurrentPath={true}
    />
  </div>
  <div
    className="comparison-container"
  >
    <h1>
      Compare Positions
    </h1>
    <div
      className="comparison-table-container"
    >
      <table
        className="tm-table"
      >
        <caption
          className="usa-sr-only"
        >
          Position details comparison:
        </caption>
        <thead
          className="usa-sr-only"
        >
          <tr>
            <th
              scope="row"
            >
              Position
            </th>
            <th
              key="C0RiPA0qJx6"
            >
              <div
                className="column-title-main"
              />
            </th>
            <th
              key="jt_kJUvqGrZ"
            >
              <div
                className="column-title-main"
              />
            </th>
            <th
              className="empty"
              key="Ua5n_ruvxt6"
            >
              Return to search results and add more positions to compare.
            </th>
            <th
              className="empty"
              key="eezO8ws5HY1"
            >
              Return to search results and add more positions to compare.
            </th>
            <th
              className="empty"
              key="sXvz9PSE6_a"
            >
              Return to search results and add more positions to compare.
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <th
              scope="row"
            >
              Position
            </th>
            <td
              key="tTjqPbr-HyN"
            >
              <div
                className="usa-grid-full"
              >
                <div
                  className="column-title-main"
                >
                  OMS (DCM)
                </div>
                <div
                  className="close-button-container"
                >
                  <CompareCheck
                    as="div"
                    className=""
                    customElement={
                      <FontAwesome
                        name="close"
                      />
                    }
                    interactiveElementProps={
                      Object {
                        "title": "Remove this comparison",
                      }
                    }
                    limit={5}
                    onToggle={[Function]}
                    refKey={1}
                    type="compare"
                  />
                </div>
              </div>
              <span
                aria-labelledby="1 0 0 3 4 0 0 1"
              >
                10034001
              </span>
            </td>
            <td
              key="36fOAdC4rCy"
            >
              <div
                className="usa-grid-full"
              >
                <div
                  className="column-title-main"
                >
                  SPECIAL AGENT
                </div>
                <div
                  className="close-button-container"
                >
                  <CompareCheck
                    as="div"
                    className=""
                    customElement={
                      <FontAwesome
                        name="close"
                      />
                    }
                    interactiveElementProps={
                      Object {
                        "title": "Remove this comparison",
                      }
                    }
                    limit={5}
                    onToggle={[Function]}
                    refKey={2}
                    type="compare"
                  />
                </div>
              </div>
              <span
                aria-labelledby="5 6 0 8 2 0 0 0"
              >
                56082000
              </span>
            </td>
            <th
              className="empty"
              key="8OFA-g8i6HH"
            >
              Return to search results and add more positions to compare.
            </th>
            <th
              className="empty"
              key="MT86mXzA5_X"
            >
              Return to search results and add more positions to compare.
            </th>
            <th
              className="empty"
              key="QdcDXoZ0F_P"
            >
              Return to search results and add more positions to compare.
            </th>
          </tr>
          <tr>
            <th
              scope="row"
            >
              Link to details
            </th>
            <td
              key="3EeOt-bUIHP"
            >
              <div
                className="column-title-link"
              >
                <Link
                  replace={false}
                  to="/details/1"
                >
                  View position
                </Link>
              </div>
            </td>
            <td
              key="OnXhy_vo8DR"
            >
              <div
                className="column-title-link"
              >
                <Link
                  replace={false}
                  to="/details/2"
                >
                  View position
                </Link>
              </div>
            </td>
            <td
              className="empty"
              key="SZaf-X3ZV6p"
            />
            <td
              className="empty"
              key="EojmpoCnLDK"
            />
            <td
              className="empty"
              key="M99hwqo2vde"
            />
          </tr>
          <Flag
            name="flags.static_content"
            render={[Function]}
          />
          <tr>
            <th
              scope="row"
            >
              Location
            </th>
            <td
              key="URNJdSmVAXj"
            >
              Freetown, Sierra Leone
            </td>
            <td
              key="yn2yc51serB"
            >
              Chicago, IL
            </td>
            <td
              className="empty"
              key="EzrlMzCZIrw"
            />
            <td
              className="empty"
              key="SyxHLl36gdv"
            />
            <td
              className="empty"
              key="coIsi9xLAJ9"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              TED
            </th>
            <td
              key="S7qy1BhNxl8"
            >
              None listed
            </td>
            <td
              key="r3hYArUTQWi"
            >
              None listed
            </td>
            <td
              className="empty"
              key="4le1Wg3vox7"
            />
            <td
              className="empty"
              key="rS09v6OvgGz"
            />
            <td
              className="empty"
              key="6mp0CG3T_y4"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Skill
            </th>
            <td
              key="z17J_COYGCx"
            >
              None listed
            </td>
            <td
              key="eMQmGszvQvH"
            >
              SECURITY (2501)
            </td>
            <td
              className="empty"
              key="Qgo1Xger_Io"
            />
            <td
              className="empty"
              key="6Jcu74XPl3L"
            />
            <td
              className="empty"
              key="30nJf6PwLoi"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Grade
            </th>
            <td
              key="onyKwhtlamf"
            >
              06
            </td>
            <td
              key="hv3eJW8YWXY"
            >
              04
            </td>
            <td
              className="empty"
              key="jbWY3z7c94W"
            />
            <td
              className="empty"
              key="IWX2v5PieRQ"
            />
            <td
              className="empty"
              key="X8UKfWZp3pH"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Bureau
            </th>
            <td
              key="Xt6EH1hEuhr"
            >
              None listed
            </td>
            <td
              key="sevtT1Tcd9j"
            >
              (WHA) BUREAU OF WESTERN HEMISPHERIC AFFAIRS
            </td>
            <td
              className="empty"
              key="bVdRTDUjOo8"
            />
            <td
              className="empty"
              key="vWgT6kRAnXv"
            />
            <td
              className="empty"
              key="waA5viTUU5f"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Tour of duty
            </th>
            <td
              key="UlycogxA5Xs"
            >
              None listed
            </td>
            <td
              key="QROYC4617rB"
            >
              2 YRS (2 R & R)
            </td>
            <td
              className="empty"
              key="QFQMbT5zD21"
            />
            <td
              className="empty"
              key="ohfyTsYKuO7"
            />
            <td
              className="empty"
              key="ERdrmRBU_AE"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Language
            </th>
            <td
              key="70Yf8jazOi8"
            >
              <LanguageList
                languages={Array []}
                propToUse="representation"
              />
            </td>
            <td
              key="Zyec5V9zAau"
            >
              <LanguageList
                languages={
                  Array [
                    Object {
                      "id": 1,
                      "language": "French (FR)",
                      "reading_proficiency": "2",
                      "representation": "French (FR) 2/2",
                      "spoken_proficiency": "2",
                    },
                    Object {
                      "id": 20,
                      "language": "Haitian Creole (HC)",
                      "reading_proficiency": "0",
                      "representation": "Haitian Creole (HC) 0/0",
                      "spoken_proficiency": "0",
                    },
                  ]
                }
                propToUse="representation"
              />
            </td>
            <td
              className="empty"
              key="k1akl_xuPKD"
            />
            <td
              className="empty"
              key="csRtMGD1w5f"
            />
            <td
              className="empty"
              key="Ftw8R8iAVrU"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Post differential
            </th>
            <td
              key="2rUp6cMLpCb"
            >
              30%
            </td>
            <td
              key="n8zbeu-MsXM"
            >
              20%
            </td>
            <td
              className="empty"
              key="rN_exMPIRL5"
            />
            <td
              className="empty"
              key="97AVp2eUyAJ"
            />
            <td
              className="empty"
              key="UBhwzMfnt0D"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Danger pay
            </th>
            <td
              key="2-wWuekmoQ8"
            >
              0%
            </td>
            <td
              key="9MqurKGGyJB"
            >
              15%
            </td>
            <td
              className="empty"
              key="EwW7mltBa4m"
            />
            <td
              className="empty"
              key="7swHv29hVqi"
            />
            <td
              className="empty"
              key="ibDpqie_FRB"
            />
          </tr>
          <tr>
            <th
              scope="row"
            >
              Favorite
            </th>
            <td
              key="m1tMe1QK-GK"
            >
              <Connect(FavoriteContainer)
                compareArray={
                  Object {
                    "results": Array [],
                  }
                }
                hasBorder={true}
                refKey={1}
                refresh={true}
                useButtonClass={true}
                useButtonClassSecondary={true}
              />
            </td>
            <td
              key="8cZp15uEcox"
            >
              <Connect(FavoriteContainer)
                compareArray={
                  Object {
                    "results": Array [],
                  }
                }
                hasBorder={true}
                refKey={2}
                refresh={true}
                useButtonClass={true}
                useButtonClassSecondary={true}
              />
            </td>
            <td
              className="empty"
              key="7T87f0XMYYj"
            />
            <td
              className="empty"
              key="M2xoYcr4ss9"
            />
            <td
              className="empty"
              key="avNR5xBTWTw"
            />
          </tr>
          <Flag
            name="flags.static_content"
            render={[Function]}
          />
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
